--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@article{ahmed_etal13,
+  title = {Are Gay Men and Lesbians Discriminated against in the Hiring Process?},
+  author = {Ahmed, Ali M. and Andersson, Lina and Hammarstedt, Mats},
+  date = {2013},
+  journaltitle = {Southern Economic Journal},
+  volume = {79},
+  number = {3},
+  pages = {565--585},
+  issn = {2325-8012},
+  doi = {10.4284/0038-4038-2011.317},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.4284/0038-4038-2011.317},
+  urldate = {2024-07-01},
+  abstract = {This article presents the first field experiment on sexual orientation discrimination in the hiring process in the Swedish labor market. Job applications were sent to about 4000 employers in 10 different occupations in Sweden. Gender and sexual orientation were randomly assigned to applications. The results show that sexual orientation discrimination exists in the Swedish labor market. The discrimination against the gay male applicant and the lesbian applicant varied across different occupations and appears to be concentrated in the private sector. The results also show that the gay male applicant was discriminated against in typical male-dominated occupations, whereas the lesbian applicant was discriminated against in typical female-dominated occupations. Theoretical implications are discussed.},
+  langid = {english},
+  keywords = {C93,J15,J71},
+  file = {C:\Users\user\Zotero\storage\RGCM7VLU\0038-4038-2011.html}
+}
+
 @article{barbayannis_etal22,
   title = {Academic Stress and Mental Well-Being in College Students: {{Correlations}}, Affected Groups, and {{COVID-19}}},
   shorttitle = {Academic Stress and Mental Well-Being in College Students},
@@ -15,6 +33,104 @@
   langid = {english},
   keywords = {Academic stress,college students,COVID-19,PAS,SWEMWBS,Well-being},
   file = {C:\Users\user\Zotero\storage\C8PRYFA4\Barbayannis et al. - 2022 - Academic Stress and Mental Well-Being in College S.pdf}
+}
+
+@article{broockman_skovron18a,
+  title = {Bias in Perceptions of Public Opinion among Political Elites},
+  author = {Broockman, David E. and Skovron, Christopher},
+  date = {2018-08},
+  journaltitle = {American Political Science Review},
+  volume = {112},
+  number = {3},
+  pages = {542--563},
+  issn = {0003-0554, 1537-5943},
+  doi = {10.1017/S0003055418000011},
+  url = {https://www.cambridge.org/core/journals/american-political-science-review/article/abs/bias-in-perceptions-of-public-opinion-among-political-elites/2EF080E04D3AAE6AC1C894F52642E706},
+  urldate = {2024-07-01},
+  abstract = {The conservative asymmetry of elite polarization represents a significant puzzle. We argue that politicians can maintain systematic misperceptions of constituency opinion that may contribute to breakdowns in dyadic representation. We demonstrate this argument with original surveys of 3,765 politicians’ perceptions of constituency opinion on nine issues. In 2012 and 2014, state legislative politicians from both parties dramatically overestimated their constituents’ support for conservative policies on these issues, a pattern consistent across methods, districts, and states. Republicans drive much of this overestimation. Exploiting responses from politicians in the same district, we confirm these partisan differences within individual districts. Further evidence suggests that this overestimation may arise due to biases in who contacts politicians, as in recent years Republican citizens have been especially likely to contact legislators, especially fellow Republicans. Our findings suggest that a novel force can operate in elections and in legislatures: Politicians can systematically misperceive what their constituents want.},
+  langid = {english},
+  file = {C:\Users\user\Zotero\storage\PXHINLYS\Broockman and Skovron - 2018 - Bias in Perceptions of Public Opinion among Politi.pdf}
+}
+
+@article{brown98,
+  title = {Sexual Orientation and Labor Economics},
+  author = {Brown, Cara L.},
+  date = {1998-01-01},
+  journaltitle = {Feminist Economics},
+  volume = {4},
+  number = {2},
+  pages = {89--95},
+  publisher = {Routledge},
+  issn = {1354-5701},
+  doi = {10.1080/135457098338482},
+  url = {https://doi.org/10.1080/135457098338482},
+  urldate = {2024-07-01},
+  abstract = {In attempting to ascertain various impacts on labor market outcomes using categories such as gender, race, ethnicity, and physical ability, a void exists with respect to sexual orientation. Whereas heterosexism and homophobia can explain some of the reasons for the void, the inability to collect data randomly about homosexuals' experiences in the labor market nullifies the basic tenet of all scientific research-random samples. A unique approach is presented which looks at income data for nonrelatives of the same sex, ages 45 to 64, living together in Canada, as a first attempt at comparing same-sex and opposite-sex genders, and is used to demonstrate the contribution of recognizing sexual orientation to economic questions. Other examples based on well-known debates about female labor participation and gender wage gaps are presented to evaluate the usefulness of studying economics recognizing sexual orientation. The need for such study is acknowledged as a measure of the inclusiveness of the economics discipline.},
+  keywords = {Elasticities,Heterosexism,Homophobia,Sexual Division Of Labor,Sexual Orientation,Wages},
+  file = {C:\Users\user\Zotero\storage\WREC38IM\Brown - 1998 - Sexual Orientation and Labor Economics.pdf}
+}
+
+@article{fairlie_etal23,
+  title = {Were Small Businesses More Likely to Permanently Close in the Pandemic?},
+  author = {Fairlie, Robert and Fossen, Frank M. and Johnsen, Reid and Droboniku, Gentian},
+  date = {2023-04-01},
+  journaltitle = {Small Business Economics},
+  shortjournal = {Small Bus Econ},
+  volume = {60},
+  number = {4},
+  pages = {1613--1629},
+  issn = {1573-0913},
+  doi = {10.1007/s11187-022-00662-1},
+  url = {https://doi.org/10.1007/s11187-022-00662-1},
+  urldate = {2024-07-01},
+  abstract = {Previous estimates indicate that COVID-19 led to a large drop in the number of operating businesses operating early in the pandemic, but surprisingly little is known on whether these shutdowns turned into permanent closures and whether small businesses were disproportionately hit. This paper provides the first analysis of permanent business closures using confidential administrative firm-level panel data covering the universe of businesses filing sales taxes from the California Department of Tax and Fee Administration. We find large increases in closure rates in the first two quarters of 2020, but a strong reversal of this trend in the third quarter of 2020. The increase in closures rates in the first two quarters of the pandemic was substantially larger for small businesses than large businesses, but the rebound in the third quarter was also larger. The disproportionate closing of small businesses led to a sharp concentration of market share among larger businesses as indicated by the Herfindahl–Hirschman Index with only a partial reversal after the initial increase. The findings highlight the fragility of small businesses during a large adverse shock and the consequences for the competitiveness of markets.},
+  langid = {english},
+  keywords = {Closures,Coronavirus,COVID-19,Entrepreneurship,H25,I18,L26,Pandemic,Self-employment,Shelter-in-place restrictions,Small business,Social distancing restrictions,Survival},
+  file = {C:\Users\user\Zotero\storage\IP76A7WS\Fairlie et al. - 2023 - Were small businesses more likely to permanently c.pdf}
+}
+
+@article{holcombe_boudreaux15,
+  title = {Regulation and Corruption},
+  author = {Holcombe, Randall G and Boudreaux, Christopher J},
+  date = {2015},
+  journaltitle = {Public Choice},
+  shortjournal = {Public Choice},
+  volume = {164},
+  pages = {75--85},
+  publisher = {Springer},
+  issn = {0048-5829}
+}
+
+@incollection{lupu_zechmeister20,
+  title = {Chapter 3. {{Social}} Media and Political Attitudes in the {{Latin American}} and {{Caribbean}} Region},
+  booktitle = {The {{Political Culture}} of {{Democracy}} in {{Ecuador}} and in the {{Americas}}, 2018/19: {{Taking}} the {{Pulse}} of {{Democracy}}},
+  author = {Lupu, Noam and Zechmeister, Elizabeth J.},
+  editor = {Donoso, Juan Carlos and Moncagatta, Paolo and Moscoso, Arturo and Pachano, Simón and Montalvo, J. Daniel and Zechmeister, Elizabeth J.},
+  date = {2020},
+  series = {{{AmericasBarometer Country Studies}}},
+  edition = {1},
+  volume = {1},
+  number = {2018/19},
+  pages = {45--72},
+  publisher = {Latin American Public Opinion Project},
+  location = {Quito},
+  url = {https://www.vanderbilt.edu/lapop/ecuador/AB2018-19-Ecuador-Country-Report-Eng-V2-W-200903.pdf},
+  urldate = {2024-02-23},
+  langid = {english},
+  volumes = {1}
+}
+
+@online{redaccionprimicias20,
+  title = {Mapa electoral: cuánto pesa el voto de las 24 provincias},
+  shorttitle = {Mapa electoral},
+  author = {{Redacción Primicias}},
+  date = {2020-10-12},
+  url = {https://www.primicias.ec/noticias/politica/mapa-electoral-pesa-voto-provincias/},
+  urldate = {2024-07-01},
+  abstract = {El padrón electoral para las elecciones en 2021 tiene poco más de 13 millones y con una reducción de 162.844 en relación a los comicios de 2017.},
+  langid = {spanish},
+  organization = {Primicias},
+  file = {C:\Users\user\Zotero\storage\U3I8PL9X\mapa-electoral-pesa-voto-provincias.html}
 }
 
 @article{stanley_etal23,
