--- a/syllabus_intro_to_stats.qmd
+++ b/syllabus_intro_to_stats.qmd
@@ -20,11 +20,9 @@ bibliography: references.bib
 
 This course introduces statistics at a basic level, focusing on its application to quantitative social science research. The course assumes no prior knowledge of statistics, but students will reach an intermediate level of undergraduate statistics by the end of the course. The material will not be proof-heavy, however, it will be rigorous enough to prepare you for the more advanced modules in the program (econometrics, causal inference, etc.)
 
-A good grasp of statistics cannot be achieved with theory alone. I will provide practical implementations of what we cover during class mainly using R and, to a significantly lesser extent, Stata. The sister module to this course, *Intro to R*, will focus on the practical implementations and technical aspects, while this course will focus on theory and intuition. 
+A good grasp of statistics cannot be achieved with theory alone. I will provide practical implementations of what we cover during class mainly using R and, to a significantly lesser extent, Stata. The sister module to this course, *Intro to R*, will focus on the practical implementations and technical aspects, while this course will focus on theory and intuition. To best understand the material, students should have a basic understanding of arithmetic, algebra and cartesian graphs (i.e. x-y plots). This was provided in the introductory mathematics course at the beginning of the program. 
 
-To best understand the material, students should have a basic understanding of arithmetic, algebra and cartesian graphs (i.e. x-y plots). I will not introduce Stata in this course as it is assumed all students have already taken the introductory course on Stata from our last module, *Intro to Stata*, but I will provide guidance if needed.
-
-# Module contents
+# Module contents {#sec-contents}
 
 The following is a planned outline of the course. This may change depending on the pace of the class. Each lecture will have one or two assigned readings, which will all be academic articles submitted to the course's [GitHub repository](https://github.com/laboratoriolide/intro-to-stats). See below for details on these readings.
 
@@ -55,11 +53,10 @@ The following is a planned outline of the course. This may change depending on t
 - **Lecture 4**: Statistical inference
     - What is statistical inference?
     - Sampling distributions
-    - The central limit theorem
-    - The law of large numbers
+    - The central limit theorem and the law of large numbers
     - Expected value, variance and standard errors
     - Using simulation to understand sampling distributions
-    - **Assigned reading**
+    - **Assigned reading**: None, see DataCamp platform for assignments. 
 
 - **Lecture 5**: Point and interval estimation
     - What is estimation? 
@@ -75,14 +72,14 @@ The following is a planned outline of the course. This may change depending on t
     - $p$-values and critical values
     - Single-sample hypothesis tests: one and two-tailed tests
     - One sample $z$-test for mean inference
+    - Time-permitting: Statistical power, sample size, effect size and simulation exercises
     - **Assigned reading**: @ahmed_etal13, with attention to Table 1.
 
 - **Lecture 7**: More on hypothesis testing
     - The $t$-distribution, degrees of freedom and the one sample $t$-test
     - Two sample $z$ and $t$-tests for mean inference 
-    - Paired t-tests (dependent samples)
-    - Time permitting: critical value tables
-    - Time permitting: proportion tests and chi-squared tests
+    - Paired $t$-tests (dependent samples)
+    - Time permitting: statistical tables, proportion tests and chi-squared tests
     - Choosing the right test for your research question
     - **Assigned reading**: @broockman_skovron18a, with attention to Table 2.
 
@@ -93,8 +90,8 @@ The following is a planned outline of the course. This may change depending on t
     - **Assigned reading**: @stanley_etal23, 
     - Time-permitting: factorial ANOVA
 
-- **Lecture 9**: Ordinary least squares regression (OLS) I
-    - What is regression?
+- **Lecture 9**: Basic Ordinary Least Squares (OLS) regression
+    - What is regression? Is it always OLS?
     - Simple linear regression
     - Coefficient interpretation in simple regression
     - OLS features and properties: residuals, fitted values, unit transformations
@@ -107,12 +104,26 @@ The following is a planned outline of the course. This may change depending on t
 
 # Readings and course materials
 
+# Software 
+
+As mentioned, the course will also feature demonstrations of statistical concepts using Stata, a widespread software package across academic environments. Further, I will provide practice exercises to be solved with this language. These will not be graded, but feedback will provided to those that want it. I will not introduce the use of Stata, as it is assumed all students have already taken and succesfully passed the introductory course on Stata from our last module, *Intro to Stata*. However, I will answer questions and provide personalized help to those who need it, conditional on available time.
 
 # Evaluation
 
-## Assignments
+The module will be graded following the same weighting as the one proposed by the program's regulation handbook. The final grade will be calculated as follows:
 
-There will be weekly DataCamp assignments, which will be either courses, projects or exercises. These assignments are due by 11:59pm on the Sunday of the week they are assigned, however, please check the DataCamp platform for the exact due date. The assignments will focus on R programming, statistical theory or other relevant topics. There will not be assignments in Stata, however, I will provide optional Stata exercises for those interested.
+## Assignments **(Prelim)**
+
+There will be weekly DataCamp assignments that reinforce the material taught in this module as well as that of the sister *Intro to R* module. The assignments will focus on R implementations of statistical methods, statistical theory or other relevant topics. These will be either DataCamp courses, projects or exercises, and are graded on a pass/fail basis. They are due by 11:59pm on the Sunday of the week they are assigned, however, please check the DataCamp platform for the exact due date. As mentioned above, Stata exercises will be provided, but not graded.
+## Readings 
+
+There will be a reading assignment for each lecture. These can be academic or general articles that will be used as to illustrate the concepts covered in class. Students are expected to read the assigned readings before class and be prepared to discuss them. Files for all readings will be provided in the course's GitHub repository.
+
+When readings are academic articles, students should not expect to fully understand the methods used in the paper. This module is an introduction to statistics, so students will progressively learn the methods used in the readings as the course progresses. Students should focus on the specific part the reading was assigned for, as well as the paper's objective, a general overview of the methods and any applicable public policy implications. For example, for @ahmed_etal13, the focus is on understanding Table 1. 
+
+## Case study 
+
+The case study is due the last day of class. The case study involves using the skills gained in this module as well as the *Intro to R* module to analyze the provided case study dataset in groups of 5-6 students. Each group will present their findings in 10-minute academic-style presentation. followed by a 5-minute questions and answers (Q&A) session by the instructor and the rest of the class. A handout will be provided with the case study details and rubric. 
 
 ## Attendance and participation
 
