--- a/bibliography-files/references.bib
+++ b/bibliography-files/references.bib
@@ -16,6 +16,14 @@
   file = {C:\Users\user\Zotero\storage\RGCM7VLU\0038-4038-2011.html}
 }
 
+@book{anderson_etal20,
+  title = {Statistics for Business \& Economics},
+  author = {Anderson, David R and Williams, Thomas A and Cochran, James J},
+  date = {2020},
+  publisher = {Cengage Learning},
+  isbn = {1-337-90106-7}
+}
+
 @article{barbayannis_etal22,
   title = {Academic Stress and Mental Well-Being in College Students: {{Correlations}}, Affected Groups, and {{COVID-19}}},
   shorttitle = {Academic Stress and Mental Well-Being in College Students},
@@ -89,6 +97,31 @@
   file = {C:\Users\user\Zotero\storage\IP76A7WS\Fairlie et al. - 2023 - Were small businesses more likely to permanently c.pdf}
 }
 
+@book{field_etal12,
+  title = {Discovering Statistics Using {{R}}},
+  author = {Field, Andy and Miles, Jeremy and Field, Zoe and Field, Zoë},
+  date = {2012-04-05},
+  edition = {1st edition},
+  publisher = {Sage Publications},
+  location = {London ; Thousand Oaks, Calif},
+  abstract = {The R version of Andy Field's hugely popular Discovering Statistics Using SPSS takes students on a journey of statistical discovery using the freeware R. Like its sister textbook, Discovering Statistics Using R is written in an irreverent style and follows the same ground-breaking structure and pedagogical approach. The core material is enhanced by a cast of characters to help the reader on their way, hundreds of examples, self-assessment tests to consolidate knowledge, and additional website material for those wanting to learn more.},
+  isbn = {978-1-4462-0046-9},
+  langid = {english},
+  pagetotal = {957}
+}
+
+@book{heiss20,
+  title = {Using {{R}} for {{Introductory Econometrics}}},
+  author = {Heiss, Florian},
+  date = {2020-05-24},
+  publisher = {Independently published},
+  location = {Düsseldorf},
+  abstract = {Introduces the popular, powerful and free programming language and software package RFocus: implementation of standard tools and methods used in econometricsCompatible with "Introductory Econometrics" by Jeffrey M. Wooldridge in terms of topics, organization, terminology and notationCompanion website with full text, all code for download and other goodies: http://urfie.netAlso check out Using Python for Introductory Econometrics: http://upfie.net/Praise: "A very nice resource for those wanting to use R in their introductory econometrics courses." (Jeffrey M. Wooldridge)Using R for Introductory Econometrics is a fabulous modern resource. I know I'm going to be using it with my students, and I recommend it to anyone who wants to learn about econometrics and R at the same time." (David E. Giles in his blog "Econometrics Beat")Topics:A gentle introduction to RSimple and multiple regression in matrix form and using black box routinesInference in small samples and asymptoticsMonte Carlo simulationsHeteroscedasticityTime series regressionPooled cross-sections and panel dataInstrumental variables and two-stage least squaresSimultaneous equation modelsLimited dependent variables: binary, count data, censoring, truncation, and sample selectionFormatted reports and research papers combining R with R Markdown or LaTeX},
+  isbn = {9798648424364},
+  langid = {english},
+  pagetotal = {378}
+}
+
 @article{holcombe_boudreaux15,
   title = {Regulation and Corruption},
   author = {Holcombe, Randall G and Boudreaux, Christopher J},
@@ -99,6 +132,20 @@
   pages = {75--85},
   publisher = {Springer},
   issn = {0048-5829}
+}
+
+@book{huntington-klein22,
+  title = {The Effect: {{An}} Introduction to Research Design and Causality},
+  shorttitle = {The Effect},
+  author = {Huntington-Klein, Nick},
+  date = {2022-01-05},
+  edition = {1st edition},
+  publisher = {{Chapman and Hall/CRC}},
+  location = {Boca Raton},
+  abstract = {The Effect: An Introduction to Research Design and Causality is about research design, specifically concerning research that uses observational data to make a causal inference. It is separated into two halves, each with different approaches to that subject. The first half goes through the concepts of causality, with very little in the way of estimation. It introduces the concept of identification thoroughly and clearly and discusses it as a process of trying to isolate variation that has a causal interpretation. Subjects include heavy emphasis on data-generating processes and causal diagrams.Concepts are demonstrated with a heavy emphasis on graphical intuition and the question of what we do to data. When we “add a control variable” what does that actually do?Key Features: • Extensive code examples in R, Stata, and Python• Chapters on overlooked topics in econometrics classes: heterogeneous treatment effects, simulation and power analysis, new cutting-edge methods, and uncomfortable ignored assumptions• An easy-to-read conversational tone• Up-to-date coverage of methods with fast-moving literatures like difference-in-differences},
+  isbn = {978-1-03-212578-7},
+  langid = {english},
+  pagetotal = {646}
 }
 
 @incollection{lupu_zechmeister20,
@@ -118,6 +165,16 @@
   urldate = {2024-02-23},
   langid = {english},
   volumes = {1}
+}
+
+@manual{rcoreteam24,
+  type = {manual},
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  date = {2024},
+  publisher = {R Foundation for Statistical Computing},
+  location = {Vienna, Austria},
+  url = {https://www.R-project.org/}
 }
 
 @online{redaccionprimicias20,
@@ -143,4 +200,31 @@
   pages = {104442},
   publisher = {Elsevier},
   issn = {0022-1031}
+}
+
+@book{weinberg_abramowitz20,
+  title = {Statistics Using {{Stata}}: {{An}} Integrative Approach},
+  shorttitle = {Statistics Using Stata},
+  author = {Weinberg, Sharon Lawner and Abramowitz, Sarah Knapp},
+  date = {2020-02-27},
+  edition = {2 edition},
+  publisher = {Cambridge University Press},
+  location = {Cambridge, United Kingdom ; New York, NY, USA},
+  abstract = {Building upon the success of the first edition, Statistics Using Stata uses the latest version of Stata to meet the needs of today's students. Engaging and accessible for students from a variety of mathematical backgrounds, this textbook integrates statistical concepts with the Stata (version 16) software package. It aligns Stata commands with examples based on real data, enabling students to understand statistics in a way that reflects statistical practice. Capitalizing on Stata's menu-driven 'point and click' and program syntax interface, the chapters guide students from the comfortable 'point and click' environment to the beginnings of statistical programming. Its coverage of essential topics gives instructors flexibility in curriculum planning and provides students with more advanced material to prepare for future work. Online resources - including solutions to exercises, PowerPoint slides, and Stata syntax (do-files) for each chapter - allow students to review independently and adapt code to analyze new problems.},
+  isbn = {978-1-108-72583-5},
+  langid = {english},
+  pagetotal = {740}
+}
+
+@book{wooldridge20,
+  title = {Introductory Econometrics: A Modern Approach / {{Jeffrey M}}. {{Wooldridge}}.},
+  shorttitle = {Introductory Econometrics},
+  author = {Wooldridge, Jeffrey M.},
+  date = {2020},
+  edition = {Seventh edition.},
+  publisher = {Cengage},
+  abstract = {The nature of econometrics and economic date, Regression analysis with cross-sectional data. The simple regression model ; Multiple regression analysis : estimation ; Multiple regression analysis : inference ; Multiple regression analysis : OLS asymptotics ; Multiple regression analysis: further issues ; Multiple regression analysis with qualitative information ; Heteroskedasticity ; More on specification and data issues, Regression analysis with time series data. Basic regression analysis with time series data ; Further issues in using OLS with time series data ; Serial correlation and heteroskedasticity in time series regressions, Advances topics. Pooling cross sections across time : simple panel data methods ; Advanced panel data methods ; Instrumental variables estimation and two-stage least squares ; Simultaneous equations models ; Limited dependent variable models and sample selection corrections ; Advanced time series topics ; Carrying out an empirical project., Wooldridge uses a systematic approach motivated by the major problems facing applied researchers. This text provides important understanding for empirical work in many social sciences, as well as for carrying out research projects., Previous edition: Australia: Cengage Learning, 2016., Includes bibliographical references (pages 791-796) and index.},
+  isbn = {978-1-337-55886-0},
+  langid = {english},
+  keywords = {Econometrics; Econometrics}
 }
